@@ -26,6 +26,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapd modify to return actual error (ITS#6581)
 	Fixed slapd sortvals of attributes with 1 value (ITS#6715)
 	Fixed slapd syncrepl reuse of presence list (ITS#6707)
+	Fixed slapd-bdb hasSubordinates generation (ITS#6712)
 	Fixed slapd-bdb entry cache delete failure (ITS#6577)
 	Fixed slapd-bdb error propogation to overlays (ITS#6633)
 	Fixed slapd-ldap debug output of timeout (ITS#6721)
@@ -34,11 +35,14 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapd-ldap chaining with ppolicy (ITS#6540)
 	Fixed slapd-ldap with SASL/EXTERNAL (ITS#6642)
 	Fixed slapd-ndb to honor rootpw setting (ITS#6661)
+	Fixed slapd-ndb hasSubordinates generation (ITS#6712)
 	Fixed slapd-meta anon retry with failed auth method (ITS#6643)
 	Fixed slapd-meta rebind proc (ITS#6665)
 	Fixed slapd-meta to correctly rebind as user (ITS#6574)
 	Fixed slapd-meta with SASL/EXTERNAL (ITS#6642)
+	Fixed slapd-monitor hasSubordinates generation (ITS#6712)
 	Fixed slapd-sql with null objectClass (ITS#6616)
+	Fixed slapd-sql hasSubordinates generation (ITS#6712)
 	Fixed slapo-pcache callback freeing (ITS#6640)
 	Fixed slapo-pcache to ignore undefined attrs (ITS#6600)
 	Fixed slapo-ppolicy don't update opattrs on consumers (ITS#6608)
